--- a/People.Rmd
+++ b/People.Rmd
@@ -8,6 +8,23 @@ description: |
   Want to work with us? Please select from "Join the team" dropdown.
 ---
 
+<!-- TEMPLATE FOR NEW PEOPLE -->
+
+<!-- :::float-image -->
+
+<!-- ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE} -->
+<!-- knitr::include_graphics("images/FILE_NAME") -->
+<!-- ``` -->
+
+<!-- [NAME](NAME.html) -->
+<!-- <br/> -->
+<!-- **TITLE** -->
+<!-- ::: -->
+
+<!-- <br/> -->
+
+<!-- END OF TEMPLATE -->
+
 <center>
 ## Faculty
 </center>
@@ -96,6 +113,35 @@ knitr::include_graphics("images/CorrynD.png")
 
 <br/>
 
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person ", echo=FALSE}
+knitr::include_graphics("images/EllieH.png")
+```
+
+[Ellie Hull](EllieH.html)
+<br/>
+**Undergraduate Assistant Researcher**
+:::
+
+<br/>
+
+
+<!-- :::float-image -->
+
+<!-- ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE} -->
+<!-- knitr::include_graphics("images/FILE_NAME") -->
+<!-- ``` -->
+
+[Kyler Jones](KylerJ.html)
+<br/>
+**Volunteer Assistant Researcher**
+:::
+
+<br/>
+
+
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with dark hair.", echo=FALSE}
@@ -167,6 +213,20 @@ knitr::include_graphics("images/LucasT.png")
 [Lucas Tepe](LucasT.html)
 <br/>
 **Undergraduate Assistant Researcher**
+:::
+
+<br/>
+
+
+<!-- :::float-image -->
+
+<!-- ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE} -->
+<!-- knitr::include_graphics("images/FILE_NAME") -->
+<!-- ``` -->
+
+[Linna Truong](LinnaT.html)
+<br/>
+**STEM Leaders Assistant Researcher**
 :::
 
 <br/>
