--- a/People.Rmd
+++ b/People.Rmd
@@ -86,6 +86,19 @@ knitr::include_graphics("images/FreyaW2.png")
 ## Assistant Researchers
 </center>
 
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
+knitr::include_graphics("images/JJA.png")
+```
+
+[JJ Admire-Novak](JJA.html)
+<br/>
+**STEM Leaders Assistant Researcher**
+:::
+
+<br/>
+
 
 :::float-image
 
@@ -116,6 +129,19 @@ knitr::include_graphics("images/CorrynD.png")
 
 :::float-image
 
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
+knitr::include_graphics("images/TaylorH.png")
+```
+
+[Taylor Hart](TaylorH.html)
+<br/>
+**Undergraduate Assistant Researcher**
+:::
+
+<br/>
+
+:::float-image
+
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person ", echo=FALSE}
 knitr::include_graphics("images/EllieH.png")
 ```
@@ -128,11 +154,11 @@ knitr::include_graphics("images/EllieH.png")
 <br/>
 
 
-<!-- :::float-image -->
+:::float-image
 
-<!-- ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE} -->
-<!-- knitr::include_graphics("images/FILE_NAME") -->
-<!-- ``` -->
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
+knitr::include_graphics("images/KylerJ.png")
+```
 
 [Kyler Jones](KylerJ.html)
 <br/>
@@ -218,11 +244,11 @@ knitr::include_graphics("images/LucasT.png")
 <br/>
 
 
-<!-- :::float-image -->
+:::float-image
 
-<!-- ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE} -->
-<!-- knitr::include_graphics("images/FILE_NAME") -->
-<!-- ``` -->
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
+knitr::include_graphics("images/LinnaT.png")
+```
 
 [Linna Truong](LinnaT.html)
 <br/>
