--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,51 @@ description:
   "**B**iology and **E**motion of **A**ddiction **V**ia **E**xperimental and **R**eproducible **S**cience"
 site: distill::distill_website
 ---
+
+<!-- <div class="banner"> -->
+<!--   <img class="banner-image banner-1" src="images/OSU2.png" alt="Banner 1"> -->
+<!--   <img class="banner-image banner-2" src="images/MU1.PNG" alt="Banner 2"> -->
+<!-- </div> -->
+
+<!-- <style> -->
+<!-- .banner { -->
+<!--   position: relative; -->
+<!--   width: 100%; -->
+<!--   height: 400px; -->
+<!--   overflow: hidden; -->
+<!--   margin-bottom: 20px; -->
+<!-- } -->
+
+<!-- .banner-image { -->
+<!--   position: absolute -->
+<!--   width: 100%; -->
+<!--   height: 100%; -->
+<!--   object-fit: cover; -->
+<!--   animation: bannerFade 10s infinite; -->
+<!-- } -->
+
+<!-- .banner-1 {  -->
+<!--   opacity: 0; -->
+<!--   animation-delay: 0s; -->
+<!-- } -->
+
+<!-- .banner-2 { -->
+<!--   opacity: 1; -->
+<!--   animation-delay: 5s; -->
+<!-- } -->
+
+<!-- @keyframes bannerFade { -->
+<!--   0%, 50% { -->
+<!--     opacity: 1; -->
+<!--   } -->
+<!--   50.1%, 100% { -->
+<!--     opacity: 0; -->
+<!--   } -->
+<!-- } -->
+<!-- </style> -->
+
+<!-- --- -->
+
 <img src="images/OSU2.png" alt="Oregon State University Campus on rainy day" style="width:800px;"/>
 
 :::float-image
@@ -12,7 +57,7 @@ site: distill::distill_website
 knitr::include_graphics("images/Dr_BennitoNoBG.png")
 ```
 
-We are a psychophysiological research lab in the [School of Psychological Science](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/) at [Oregon State University](https://oregonstate.edu/). We take a multi-method experimental approach to studying the affective and emotional responses to stressors and how commonly used drugs change those responses. We study the mechanisms of these responses by assessing their neurobiological, cognitive, and behavioral components. We want to learn how responses to stressors play a role in mental health challenges such as addiction and anxiety so, eventually, we can better treat such challenges. Because we want to get to the truth in our research, we approach our work with an eye to rigor, equity, and replicability all consistent with the “reproducibility revolution” and open science movement. 
+We are a psychophysiological research lab in the [School of Psychological Science](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/) at [Oregon State University](https://oregonstate.edu/). We take a multi-method experimental approach to studying the affective and emotional responses to stressors and how commonly used drugs change those responses. We study the mechanisms of these responses by assessing their neurobiological, cognitive, and behavioral components. We want to learn how responses to stressors play a role in mental health challenges such as addiction and anxiety so, eventually, we can better treat such challenges. Because we want to get to the truth in our research, we approach our work with an eye to rigor, equity, and replicability all consistent with the “reproducibility revolution” and open science movement.
 :::
 
 <div class="note">
