Updated Peoples page
Added Jackson Marra-Dotts. Updated additional pages as requested.

--- a/KylerJ.Rmd
+++ b/KylerJ.Rmd
@@ -17,6 +17,8 @@ I recently graduated from OSU with a B.S. in Psychology. I'm currently in a gap 
 B.S. in Psychology | June 2024
 
 ## Interests
+* Semantics
+* Cross-cultural psychology
 * Video games
 * Puzzles
 * Bouldering
