--- a/TaylorH.Rmd
+++ b/TaylorH.Rmd
@@ -30,4 +30,4 @@ B.A. in Psychology | Expected June 2025
 * Music with a syncopated beat
 * Parking lot car-aoke
 * Routine walks and aimless forest runs
-* Outer-spacing
+* And occasionally, outer-spacing
