Updated front page notices
Updated note about accepting students and made note that website is under construction

--- a/index.Rmd
+++ b/index.Rmd
@@ -57,11 +57,11 @@ site: distill::distill_website
 knitr::include_graphics("images/Dr_BennitoNoBG.png")
 ```
 
-We are a psychophysiological research lab in the [School of Psychological Science](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/) at [Oregon State University](https://oregonstate.edu/). We take a multi-method experimental approach to studying the affective and emotional responses to stressors and how commonly used drugs change those responses. We study the mechanisms of these responses by assessing their neurobiological, cognitive, and behavioral components. We want to learn how responses to stressors play a role in mental health challenges such as addiction and anxiety so, eventually, we can better treat such challenges. Because we want to get to the truth in our research, we approach our work with an eye to rigor, equity, and replicability all consistent with the “reproducibility revolution” and open science movement.
+NOTE: This website is currently under construction so some pages are a bit out of date. We are a psychophysiological research lab in the [School of Psychological Science](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/) at [Oregon State University](https://oregonstate.edu/). We take a multi-method experimental approach to studying the affective and emotional responses to stressors and how commonly used drugs change those responses. We study the mechanisms of these responses by assessing their neurobiological, cognitive, and behavioral components. We want to learn how responses to stressors play a role in mental health challenges such as addiction and anxiety so, eventually, we can better treat such challenges. Because we want to get to the truth in our research, we approach our work with an eye to rigor, equity, and replicability all consistent with the “reproducibility revolution” and open science movement.
 :::
 
 <div class="note">
-<strong> NOTE:</strong> Dr. Bradford **WILL** be reviewing applications for the 2024-2025 graduate student application cycle for the Psychology PhD program with focus on Health Psychology and for the new Clinical Science option. Our Clinical Science option is new this year and we intend to seek APA accreditation. If you would like to learn more about the Clinical Science option, please click [here](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/psychology-ms-phd/clinical-science-option/). You can find an FAQ that our lab thinks could be helpful with your application process [here](https://docs.google.com/document/d/1cgiioIpdXRSe2QdZZRGtCqdK9Jglsd_KBV58uBdfjhw/edit).
+<strong> NOTE:</strong> Dr. Bradford **WILL** be reviewing applications for the 2025-2026 graduate student application cycle for the Psychology PhD program with focus on Health Psychology and for the new Clinical Science option. Our Clinical Science option is new as of last year and we are currently seeking APA accreditation. If you would like to learn more about the Clinical Science option, please click [here](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/psychology-ms-phd/clinical-science-option/). You can find an FAQ that our lab thinks could be helpful with your application process [here](https://docs.google.com/document/d/1cgiioIpdXRSe2QdZZRGtCqdK9Jglsd_KBV58uBdfjhw/edit).
 Feel free to contact Dr. Bradford at daniel.bradford@oregonstate.edu with any questions. </div> 
 
 <!--- Dr. Bradford will be reviewing applications for the 2023 graduate student application cycle for the Health Psychology PhD program. If you would like to learn more about the Health Psychology PhD program at OSU, click [here](https://liberalarts.oregonstate.edu/sps/psychology/graduate-psychology/about-our-program/health-psychology-area). Feel free to contact Dr. Bradford at daniel.bradford@oregonstate.edu with any questions.--> 
