--- a/index.Rmd
+++ b/index.Rmd
@@ -57,7 +57,7 @@ site: distill::distill_website
 knitr::include_graphics("images/Dr_BennitoNoBG.png")
 ```
 
-NOTE: This website is currently under construction so some pages are a bit out of date. We are a psychophysiological research lab in the [School of Psychological Science](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/) at [Oregon State University](https://oregonstate.edu/). We take a multi-method experimental approach to studying the affective and emotional responses to stressors and how commonly used drugs change those responses. We study the mechanisms of these responses by assessing their neurobiological, cognitive, and behavioral components. We want to learn how responses to stressors play a role in mental health challenges such as addiction and anxiety so, eventually, we can better treat such challenges. Because we want to get to the truth in our research, we approach our work with an eye to rigor, equity, and replicability all consistent with the “reproducibility revolution” and open science movement.
+NOTE: This website is currently under construction so some pages are a bit out of date. We are a psychophysiological research lab in the [School of Psychological Science](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/) at [Oregon State University](https://oregonstate.edu/). We take a multi-method experimental approach to studying the affective and emotional responses to stressors and how commonly used drugs and brain injury (i.e., TBI/concussions) change those responses. We study the mechanisms of these responses by assessing their neurobiological, cognitive, and behavioral components. We want to learn how responses to stressors play a role in mental health challenges such as addiction and anxiety so, eventually, we can better treat such challenges. Because we want to get to the truth in our research, we approach our work with an eye to rigor, equity, and replicability all consistent with the “reproducibility revolution” and open science movement.
 :::
 
 <div class="note">
