--- a/Presentations.Rmd
+++ b/Presentations.Rmd
@@ -11,6 +11,55 @@ description:
   OSF =  link to Open Science Foundation project repository for shared data and materials.
 
 ---
+
+## -2026- ##
+
+Bradford, D.E. (2026, May). Reinforcing psychology’s role as a hub science. Distinguished speakers invited 
+talk to be presented at the 106th annual meeting of the Western Psychological Association, Tacoma, WA.
+
+## -2025- ##
+
+
+
+Bradford, D.E. (2025, October). Psychophysiology's Imperiled but Enduring Role as a Hub Method. Paper 
+presented at the 65th annual meeting of the Society for Psychophysiological Research, Montreal, CA.
+
+Hull, E., Whittaker, F., Perez, M., Goldblum, R.S., Respini, S.E., & Bradford, D. E. Bringing Fear of the 
+Dark into the Light through a Multi-Measurement Approach. (2025, October). Poster presented at the 65th annual 
+Society for Psychophysiological Research meeting, Montréal, QC.
+
+Marra-Dotts, J.L., Xu, C.P., Goldblum, R.S., Whittaker, F., Dietch, J.R., & Bradford, D. E. Timing Matters: 
+The Impacts of Circadian Rhythm on Dark Enhanced Startle. (2025, October). Poster presented at the 65th annual 
+Society for Psychophysiological Research meeting, Montréal, QC.
+
+ Whittaker, F., Oldham, J. R., Boylan, L. E., Goldblum, R. S., Marra-Dotts, J., Rutherford, M., Hooper, C., 
+Byrne, L. M., Truong, L. T., & Bradford, D. E. Cleared but Not Recovered: Persistent Startle Reactivity Changes 
+After Concussion in Adolescent Athletes. (2025, October). Poster presented at the 65th annual Society for 
+Psychophysiological Research meeting, Montréal, QC
+
+Goldblum, R. S., Whittaker, F., Respini, S. E., Perez, M., Hull, E. L., Admire-Novak, J. & Bradford, D. E.
+Let's Talk About Sex...Differences in Alcohol's Pharmacological Effects on Startle Potentiation: A Multiverse 
+Approach. (2025, October). Poster presented at the 65th annual Society for Psychophysiological Research 2025 
+Meeting, Montreal, Canada.
+
+ Bradford, D.E., Goldblum. R. (2025, September). From Animal Models to Human Reactions: Translating 
+Drug and Injury Induced Neuroadaptations to Uncertain Stressors. Invited talk for Research Experience and
+Lunch (REAL), Linfield University, McMinnville, OR.
+
+Dooley, C., Whittaker, F., Respini, S. E., Gilmore, E. M., Stern, G. M., Perez, M., Slangan, C. S., Hart, T. & 
+Bradford, D. E. Shedding Light on Fear of the Dark Using Multimodal Assessment. (2025, August). Poster 
+presented at the American Psychological Association 2025 Meeting, Denver, CO.
+
+
+Tepe, L. R., Whittaker, F., Gilmore, E. M., Respini, S. E., Ransford, K., Doran, N. C., Hull, E. L., Goldblum, 
+R. S., & Bradford, D. E. The Effects of Drinking Frequency on Physiological Stress and Alcohol’s Response 
+Dampening. (2025, August). Poster presented at the American Psychological Association 2025 Meeting, Denver, 
+CO.
+
+ Oldham J, Bradford D.E., Nagle S, Willwerth S, Mannix R, Meehan W. Acoustic Startle Reflex and 
+Sensitivity to Noise in Adolescent Athletes Following Concussion. (2025, January). Poster presented at the 
+Pediatric Research in Sports Medicine Annual Meeting. Columbus, OH.
+
 ## -2024- ##
 
 Whittaker, F., Respini, S. E., Gilmore, E. M., Tognoli, M. I., Ransford, K., Byrne, L., Xu, C. P., Ma, Q., & Bradford, D. E. Shots In The Dark: Alcohol Dampens Startle Potentiation In A Novel Threat Of Darkness Paradigm. (2024, October). Poster to be presented at the 64th annual Society for Psychophysiological Research, Prague, Czech Republic. 
