--- a/People.Rmd
+++ b/People.Rmd
@@ -82,6 +82,22 @@ knitr::include_graphics("images/FreyaW2.png")
 :::
 <br/>
 
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person.", echo=FALSE}
+knitr::include_graphics("images/AubreyFPFP.png")
+```
+
+[Aubrey Freitas](AubreyF.html)
+<br/>
+**Graduate Student, Clinical Psychology**
+<br/>
+[CV](files/CVs/Freitas_CV.pdf) 
+
+
+
+:::
+<br/>
 <center> 
 ## Assistant Researchers
 </center>
