Updating pictures & profiles
Reformatted several peoples photos to be square, updated Freya's CV & profile page. Added CadenH's profile. Moved CharlieX's and JjA's profiles to Alumni.

--- a/FreyaW.Rmd
+++ b/FreyaW.Rmd
@@ -16,24 +16,24 @@ output:
 
 I am a graduate student in the BEAVERS Lab. I grew up between New Hampshire and Massachusetts, and I received my Bachelor of Arts from Dickinson College with honors in Psychology and French & Francophone Studies in 2021. 
  
-As an undergraduate I assisted in two psychology labs, one evaluating a program designed to reduce the impacts of caregivers’ Substance Use Disorders on children, and the other studying the physical and mental health impacts of the COVID-19 pandemic on young adults. While studying abroad in Copenhagen, Denmark, I conducted research on the relationship between food insecurity and mental health outcomes in the Danish welfare state. I also independently conducted a study on the relationship between stress, social support, and substance use behaviors in the context of the COVID-19 pandemic. These early research experiences contributed to my broad interest in studying stress, substance use, and mental and physical health disparities. 
+As an undergraduate I assisted in two psychology labs, one evaluating a program designed to reduce the impacts of caregivers’ Substance Use Disorders on children, and the other studying the physical and mental health impacts of the COVID-19 pandemic on young adults. While studying abroad in Copenhagen, Denmark, I conducted research on the relationship between food insecurity and mental health outcomes in the Danish welfare state. I also independently conducted a study on the relationship between stress, social support, and substance use behaviors in the context of the COVID-19 pandemic. 
  
 After graduating from Dickinson, I worked as a clinical research assistant in Shannon Wiltsey Stirman’s FAST Lab at Stanford University and the National Center for PTSD studying PTSD treatment implementation and dissemination before joining the BEAVERS Lab.  
  
-My research interests lie in investigating how brain injury and substances—namely alcohol and sugar—can moderate psychophysiological stress responses. More broadly, I am passionate about pursuing research questions aimed at understanding and reducing health disparities. 
+My research interests lie in investigating the factors that shape physiological stress, attention, and other factors relevant to human performance. I have explored the impacts of darkness, alcohol, sugar and—most recently—brain injury and auditory processing on these critical human factors.
  
 ## Education
 
 
 **Oregon State University** | Corvallis, OR
 
-Ph.D. in Health Psychology | Expected June 2027
+Ph.D. in Health Psychology | Expected June 2026
 </br>
-M.S. in Psychology | June 2024
+M.S. in Experimental Psychology | June 2024
 
 **Dickinson College** | Carlisle, PA
 
-B.A. in Psychology | May 2021
+B.A. in Experimental Psychology | May 2021
 </br>
 B.A. in French & Francophone Studies | May 2021
 
