--- a/People.Rmd
+++ b/People.Rmd
@@ -54,6 +54,23 @@ knitr::include_graphics("images/Daniel.JPG")
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person.", echo=FALSE}
+knitr::include_graphics("images/AubreyFPFP.png")
+```
+
+[Aubrey Freitas](AubreyF.html)
+<br/>
+**Graduate Student, Clinical Psychology**
+<br/>
+[CV](files/CVs/Freitas_CV.pdf) 
+
+
+
+:::
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person.", echo=FALSE}
 knitr::include_graphics("images/RachelG.png")
 ```
 
@@ -82,38 +99,12 @@ knitr::include_graphics("images/FreyaW2.png")
 :::
 <br/>
 
-:::float-image
 
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person.", echo=FALSE}
-knitr::include_graphics("images/AubreyFPFP.png")
-```
-
-[Aubrey Freitas](AubreyF.html)
-<br/>
-**Graduate Student, Clinical Psychology**
-<br/>
-[CV](files/CVs/Freitas_CV.pdf) 
-
-
-
-:::
-<br/>
 <center> 
 ## Assistant Researchers
 </center>
 
-:::float-image
 
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
-knitr::include_graphics("images/JJA.png")
-```
-
-[JJ Admire-Novak](JJA.html)
-<br/>
-**STEM Leaders Assistant Researcher**
-:::
-
-<br/>
 
 
 :::float-image
@@ -152,6 +143,19 @@ knitr::include_graphics("images/TaylorH.png")
 [Taylor Hart](TaylorH.html)
 <br/>
 **Undergraduate Assistant Researcher**
+:::
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
+knitr::include_graphics("images/CadenH.png")
+```
+
+[Caden Hooper](CadenH.html)
+<br/>
+**URSA Assistant Researcher**
 :::
 
 <br/>
@@ -286,17 +290,7 @@ knitr::include_graphics("images/LinnaT.png")
 <br/>
 
 
-:::float-image
 
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with dark hair and a black windbreaker in front of a brick building.", echo=FALSE}
-knitr::include_graphics("images/CharlieX.png")
-```
-[Charlie Xu](CharlieX.html)
-<br/>
-**URSA Assistant Researcher**
-:::
-
-<br/>
 
 <center> 
 ## Collaborators
@@ -363,6 +357,33 @@ knitr::include_graphics("images/CourtneyB.png")
 <center> 
 ## Lab Alumni
 </center>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
+knitr::include_graphics("images/JJA.png")
+```
+
+[JJ Admire-Novak](JJA.html)
+<br/>
+**STEM Leaders Assistant Researcher 2024-2025**
+:::
+
+<br/>
+
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with short black hair, and a Strawberry Shortcake white shirt on.",echo=FALSE}
+knitr::include_graphics("images/KarenAP.png")
+```
+[Karen Agustin-Paz](KarenAP.html)
+<br/>
+**STEM Leaders Assistant Researcher, 2022-2023**
+:::
+
+<br/>
+
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long brown curled hair, fair skin, and a white sash around their neck and a green dress with a blue sky, lake and buildings in the background.", echo=FALSE}
@@ -375,18 +396,6 @@ knitr::include_graphics("images/AngelicaD.jpg")
 **Graduate Student in Counseling Psychology, Colorado State University**
 <br/>
 [Google Scholar](https://scholar.google.com/citations?user=lXu-bq4AAAAJ&hl=en&oi=ao) [Twitter](https://twitter.com/A_DeFalco11)
-:::
-
-<br/>
-
-:::float-image
-
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with short black hair, and a Strawberry Shortcake white shirt on.",echo=FALSE}
-knitr::include_graphics("images/KarenAP.png")
-```
-[Karen Agustin-Paz](KarenAP.html)
-<br/>
-**STEM Leaders Assistant Researcher, 2022-2023**
 :::
 
 <br/>
@@ -478,6 +487,18 @@ knitr::include_graphics("images/MiaT.png")
 [Mia Tognoli](MiaT.html)
 <br/>
 **Honors Thesis Assistant Researcher, 2021-2024**
+:::
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with dark hair and a black windbreaker in front of a brick building.", echo=FALSE}
+knitr::include_graphics("images/CharlieX.png")
+```
+[Charlie Xu](CharlieX.html)
+<br/>
+**URSA Assistant Researcher, 2023-2025**
 :::
 
 <br/>
