--- a/Presentations.Rmd
+++ b/Presentations.Rmd
@@ -64,9 +64,20 @@ Pediatric Research in Sports Medicine Annual Meeting. Columbus, OH.
 
 Whittaker, F., Respini, S. E., Gilmore, E. M., Tognoli, M. I., Ransford, K., Byrne, L., Xu, C. P., Ma, Q., & Bradford, D. E. Shots In The Dark: Alcohol Dampens Startle Potentiation In A Novel Threat Of Darkness Paradigm. (2024, October). Poster to be presented at the 64th annual Society for Psychophysiological Research, Prague, Czech Republic. 
 
+Castro, G. B., Didier, P., Kuhn, M., Kaplan, C., Hur, J., Bradford, D.E., Curtin, J., Smith, J.F., Shackman. (2024, October). Alcohol Dampens Subjective, Psychophysiological, and Neurobiological Reactivity to Uncertain Threat. Poster presented at the Society for Neuroscience, Chicago, IL.
+
 Whittaker, F., Respini, S. E., Watkins, G. M., Gilmore, E. M., DeFalco, A., Peavey, N., Tepe, L. R., Rifkin, E. J., Perez, M., & Bradford, D. E. Lost in the Shadows: a Novel Dark-Enhanced Startle Task. (2024, August). Poster to be presented for the American Psychological Association 2024 Annual Meeting, Seattle, WA. 
 
+Bradford, D.E. (2024, June). Strategies for aiding a deeper and less stigmatizing understanding of drug use and addiction. Invited speaker, APA/The American Psychological Foundation/OSU Psychological Science Workshop for High School Psychology Teachers, Corvallis, OR.
+
+
+Bradford, D.E., Sanders, S.M., (2024, March). Mental well-being of graduate students: research, lived experience, and pathways to improvement. Invited talk for Radical Earth Science Equity Transformations (RESET) seminar. Corvallis, OR.
+
+
+
 ## -2023- ##
+
+Bradford, D.E. (2023 November). Towards more equitable psychophysiology. Office of Institutional Diversity, Diversity Research Virtual Lightning Talks. Corvallis, OR.
 
 DeFalco, A., Whittaker, F., Dooley, C., Curtin, J.J., Bradford, D.E. (2023, October) Risky business: alcohol increases the subjective value of uncertain rewards. Poster presented at the International Conference on Gambling and Addiction, Las Vegas, NV. 
 
