--- a/RachelG.Rmd
+++ b/RachelG.Rmd
@@ -14,11 +14,11 @@ output:
  
 ## Bio
 
-I am a Psychology PhD student in the Clinical Science track. I graduated from the University of Vermont in 2020 with a double major in psychology and sociology with a concentration in criminal justice. While at UVM, I served as an undergraduate RA for two years in the Rohan lab using psychophysiology to investigate prognostic treatment factors for seasonal affective disorder. After graduation, I served as a post baccalaureate RA at the Anxiety Disorders Center (ADC) investigating the neural mechanisms underlying decision making in people with hoarding disorder and anxiety disorders. After two years at the ADC, I joined the Neuro-Cognition and Emotions Lab at New York State Psychiatric Institute to conduct research investigating the emotion and memory brain processes among those who were exposed to 9/11 as children and adolescents.
+I am a Psychology PhD student in the Clinical Science track. I began conducting psychophysiology research as an undergraduate at the University of Vermont and continued this work as a post-baccalaureate research assistant. My previous research has utilized psychophysiology to examine prognostic treatment factors for seasonal affective disorder, how trauma exposure impacts neural mechanisms underlying memory and emotion, and the neural mechanisms underlying decision making in individuals with hoarding disorder and anxiety disorders.
 
-I am interested in using psychophysiological methods to better understand the relationship between stress response, affect and addiction. I hope to conduct work that can positively impact policy and healthcare. Additionally, I am interested in reducing inequities within psychophysiology research.
+Currently, I am interested in using psychophysiological methods to better understand the role of stressor reactivity in addiction and how stressor reactivity is impacted by concussion. I am committed to improving rigor and transparency in psychophysiological research by using multiverse analysis to examine how analytic decisions influence scientific findings. I hope to conduct work that can positively impact policy and healthcare.
 
-In my free time, I love having out with my dog Piper, distance running, hiking, skiing and baking.
+Outside of research, I enjoy spending time with my dog Piper, distance running, hiking, skiing, and baking.
  
 ## Education
 
