--- a/People.Rmd
+++ b/People.Rmd
@@ -95,7 +95,7 @@ knitr::include_graphics("images/FreyaW2.png")
 <br/>
 **Graduate Student, Health Psychology**
 <br/>
-[CV](files/CVs/Whittaker_CV.pdf) [Google Scholar](https://scholar.google.com/citations?hl=en&user=6EXE-RUAAAAJ) [Twitter](https://twitter.com/fmwhittaker)
+[CV](files/CVs/Whittaker_CV.pdf) [Google Scholar](https://scholar.google.com/citations?hl=en&user=6EXE-RUAAAAJ) 
 :::
 <br/>
 
@@ -105,7 +105,18 @@ knitr::include_graphics("images/FreyaW2.png")
 </center>
 
 
+:::float-image
 
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Selfie of a person with medium length curly hair, fair skin, and a black rain jacket against a background full of trees.", echo=FALSE}
+knitr::include_graphics("images/BobbiB.png")
+```
+
+[Bobbi Bailey](BobbiB.html)
+<br/>
+**Undergraduate Assistant Researcher**
+:::
+
+<br/>
 
 :::float-image
 
@@ -127,6 +138,19 @@ knitr::include_graphics("images/CorrynD.png")
 ```
 
 [Corryn Dooley](CorrynD.html)
+<br/>
+**Undergraduate Assistant Researcher**
+:::
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Selfie of a person with medium length curly hair, fair skin, and a black rain jacket against a background full of trees.", echo=FALSE}
+knitr::include_graphics("images/PuneetG.png")
+```
+
+[Puneet Gandhok](PuneetG.html)
 <br/>
 **Undergraduate Assistant Researcher**
 :::
@@ -160,33 +184,21 @@ knitr::include_graphics("images/CadenH.png")
 
 <br/>
 
-:::float-image
 
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person ", echo=FALSE}
-knitr::include_graphics("images/EllieH.png")
-```
-
-[Ellie Hull](EllieH.html)
-<br/>
-**Undergraduate Assistant Researcher**
-:::
-
-<br/>
 
 
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
-knitr::include_graphics("images/KylerJ.png")
+knitr::include_graphics("images/BochenL.png")
 ```
 
-[Kyler Jones](KylerJ.html)
+[Bochen Li](BochenL.html)
 <br/>
 **Volunteer Assistant Researcher**
 :::
 
 <br/>
-
 
 :::float-image
 
@@ -200,13 +212,15 @@ knitr::include_graphics("images/QiyingM.png")
 
 <br/>
 
+
+
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
-knitr::include_graphics("images/JacksonM.jpeg")
+knitr::include_graphics("images/MessiM.png")
 ```
 
-[Jackson Marra-Dotts](JacksonM.html)
+[Messi Morning](MessiM.html)
 <br/>
 **Volunteer Assistant Researcher**
 :::
@@ -225,6 +239,17 @@ knitr::include_graphics("images/MarissaP.jpg")
 
 <br/>
 
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long strawberry blonde straight hair, fair skin, a black shirt and blue jeans against a pink background.",echo=FALSE}
+knitr::include_graphics("images/KirstenR.png")
+```
+[Kirsten Ransford](KirstenR.html)
+<br/>
+**Undergraduate Assistant Researcher**
+:::
+
+<br/>
 
 :::float-image
 
@@ -238,14 +263,15 @@ knitr::include_graphics("images/SusieR.png")
 
 <br/>
 
+
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long dark hair, fair skin, a black shirt and blue jeans against a pink background.",echo=FALSE}
-knitr::include_graphics("images/EJR.png")
+knitr::include_graphics("images/MeganR.png")
 ```
-[EJ Rifkin](EJR.html)
+[Megan Rutherford](MeganR.html)
 <br/>
-**Volunteer Assistant Researcher**
+**Undergraduate Assistant Researcher**
 :::
 
 <br/>
@@ -439,6 +465,49 @@ knitr::include_graphics("images/EmmaG.png")
 
 <br/>
 
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person ", echo=FALSE}
+knitr::include_graphics("images/EllieH.png")
+```
+
+[Ellie Hull](EllieH.html)
+<br/>
+**Undergraduate Assistant Researcher 2024-2025**<br/>
+**Ellie is now an Instructional Aide at the Cottonwood Day School**
+:::
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
+knitr::include_graphics("images/KylerJ.png")
+```
+
+[Kyler Jones](KylerJ.html)
+<br/>
+**Volunteer Assistant Researcher 2024-2025**<br/>
+**Kyler is now a PhD student in cognitive psychology at University of Connecticut **
+:::
+
+<br/>
+
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "DESCRIPTION", echo=FALSE}
+knitr::include_graphics("images/JacksonM.jpeg")
+```
+
+[Jackson Marra-Dotts](JacksonM.html)
+<br/>
+**Volunteer Assistant Researcher 2023-2025**<br/>
+**Jackson is now a lab manager at Virginia Commonwealth University Medical School**
+:::
+
+<br/>
+
 
 :::float-image
 
@@ -453,6 +522,19 @@ knitr::include_graphics("images/NickP.png")
 
 <br/>
 
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long dark hair, fair skin, a black shirt and blue jeans against a pink background.",echo=FALSE}
+knitr::include_graphics("images/EJR.png")
+```
+[EJ Rifkin](EJR.html)
+<br/>
+**Volunteer Assistant Researcher 2023-2024**<br/>
+**EJ is now a MSc student in neuroscience at King’s College**
+:::
+
+<br/>
 
 :::float-image
 
