--- a/about.Rmd
+++ b/about.Rmd
@@ -2,7 +2,9 @@
 title: "About this site."
 description: |
   Some additional details about the website
+output: distill::distill_article
 ---
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
