--- a/Publications.Rmd
+++ b/Publications.Rmd
@@ -21,6 +21,8 @@ https://doi.org/10.1038/s41562-024-02025-0
 Oldham, J.R., DeFalco, A., Willwerth, S., Nagle, S., Whittaker, F., Mannix, R., Meehan, W.P., Bradford, D.E. (2025). Concussion-related suppression of general startle reactivity in adolescent Athletes. Journal of Head 
 Trauma Rehabilitation, 40(1). https://doi.org/10.1097/HTR.0000000000000979
 
+Seligowski, A.V., Clancy, K.J., Akman, Eylül, Lewis, M., May, V., Ravichandran, C., Jobson, S.A., Bradford, D.E., Hammack, S.E., Carlezon, W.A., Ressler, K.J., Rauch, S.L., Rosso, I.M. (2025). Associations between PACAP levels and psychophysiological indicators of fear and arousal in adults with posttraumatic stress disorder symptoms. Journal of Mood and Anxiety Disorders, 11, https://doi.org/10.1016/j.xjmad.2025.100128
+
 Kerr, D.C.R., Kasimanickman, M.R., Bradford, D.E., Baie, H., Parks, K.A. (2025). Problematic alcohol 
 behaviors and sexual assault on college campuses: How are student reports and institution-reported crime data 
 related? Journal of American College Health, 73(5), 2158–2165. https://doi.org/10.1080/07448481.2025.2492170
@@ -36,7 +38,7 @@ Lewis, M.W., Bradford, D.E., Akman, E., Frederiks, K., Pace-Schott, E.F., Rosso,
 
 ## -2023- ##
 
-Bradford, D.E., Dev, A. S., DeFalco, A., Whittaker, F., Timpano, K. A. (2023). Increasing ecological validity in neuropsychopharmacology research on the relationship between alcohol use and uncertain stressors. *Neuropsychopharmacology*. 
+Perkins, E. R., Bradford, D. E., Verona, E., Hamilton, R. H., Joyner, K. J. (2023). The intersection of racism and neuroscience technology: A cautionary tale for the criminal legal system. Policy Insights from the Behavioral and Brain Sciences. 10(2), 279-286. https://doi.org/10.1177/23727322231196299
 
 Kim, H.C., Kaplan, C.M., Islam, S., Anderson, A.S., Piper, M.E., Bradford, D.E., Curtin, J.J., DeYoung, K.A., Smith, J.F., Fox, A.S., Shackman, A.J. (2023) Acute nicotine abstinence amplifies subjective withdrawal symptoms and threat-evoked fear and anxiety, but not extended amygdala reactivity. *Plos One*.
 
